--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,6 +46,10 @@ jobs:
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platforms;android-34" "build-tools;34.0.0"
       
+      # 设置gradlew执行权限
+      - name: Make gradlew executable
+        run: chmod +x gradlew
+      
       # 运行Gradle检查
       - name: Run lint
         run: ./gradlew lint --no-daemon || true
@@ -86,6 +90,10 @@ jobs:
         run: |
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platforms;android-34" "build-tools;34.0.0"
+      
+      # 设置gradlew执行权限
+      - name: Make gradlew executable
+        run: chmod +x gradlew
       
       # 构建Debug APK
       - name: Build Debug APK
@@ -137,6 +145,10 @@ jobs:
         run: |
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platforms;android-34" "build-tools;34.0.0"
+      
+      # 设置gradlew执行权限
+      - name: Make gradlew executable
+        run: chmod +x gradlew
       
       # 解密签名文件（需要配置）
       - name: Decrypt signing key
